@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
-<addon id="service.tvtumbler" name="TvTumbler" version="0.0.6"
+<addon id="service.tvtumbler" name="TvTumbler" version="0.0.7"
 	provider-name="Bricky">
 	<requires>
 		<import addon="xbmc.python" version="2.1.0" />
@@ -14,7 +14,7 @@
 		<provides>video executable</provides>
 	</extension>
 	<extension point="xbmc.service" library="service.py" start="startup" />
-	<extension point="xbmc.addon.repository" name="TvTumbler addon repository">
+ 	<extension point="xbmc.addon.repository" name="TvTumbler addon repository">
 		<info compressed="false">http://repo.tvtumbler.com/addons.xml</info>
 		<checksum>http://repo.tvtumbler.com/addons.xml.md5</checksum>
 		<datadir zip="true">http://repo.tvtumbler.com</datadir>
