@@ -213,7 +213,7 @@
 	            <info>ListItem.Label</info>
 	         </control>
           	<control type="label">
-	          	<description>status</description>
+	          	<description>status (white)</description>
 	            <posx>460</posx>
 	            <posy>0</posy>
 	            <width>240</width>
@@ -224,6 +224,45 @@
 	            <align>left</align>
 	            <info>ListItem.Label2</info>
           	</control>
+          	<control type="label">
+	          	<description>status (running)</description>
+	            <posx>460</posx>
+	            <posy>0</posy>
+	            <width>240</width>
+	            <height>38</height>
+	            <font>font13</font>
+	            <aligny>center</aligny>
+	            <textcolor>blue</textcolor>
+	            <align>left</align>
+	            <info>ListItem.Label2</info>
+	            <visible>StringCompare(ListItem.Genre,Running)</visible>
+	         </control>
+          	<control type="label">
+	          	<description>status (downloaded)</description>
+	            <posx>460</posx>
+	            <posy>0</posy>
+	            <width>240</width>
+	            <height>38</height>
+	            <font>font13</font>
+	            <aligny>center</aligny>
+	            <textcolor>green</textcolor>
+	            <align>left</align>
+	            <info>ListItem.Label2</info>
+	            <visible>StringCompare(ListItem.Genre,Downloaded)</visible>
+	         </control>
+          	<control type="label">
+	          	<description>status (failed)</description>
+	            <posx>460</posx>
+	            <posy>0</posy>
+	            <width>240</width>
+	            <height>38</height>
+	            <font>font13</font>
+	            <aligny>center</aligny>
+	            <textcolor>red</textcolor>
+	            <align>left</align>
+	            <info>ListItem.Label2</info>
+	            <visible>StringCompare(ListItem.Genre,Failed)</visible>
+	         </control>
           	<control type="progress">
           		<description>prog bar</description>
 				<posx>460</posx>
@@ -231,10 +270,11 @@
 				<width>240</width>
 				<height>2</height>
 				<info>ListItem.Property(download_progress)</info>
+				<visible>StringCompare(ListItem.Genre,Running)</visible>
 			</control>
 	        <control type="label">
 	          	<description>progress</description>
-	            <posx>700</posx>
+	            <posx>900</posx>
 	            <posy>0</posy>
 	            <width>200</width>
 	            <height>38</height>
@@ -242,12 +282,12 @@
 	            <aligny>center</aligny>
 	            <textcolor>white</textcolor>
 	            <selectedcolor>green</selectedcolor>
-	            <align>left</align>
+	            <align>right</align>
 	            <info>ListItem.Property(progress)</info>
 	        </control>
 	        <control type="label">
 	          	<description>source</description>
-	            <posx>900</posx>
+	            <posx>975</posx>
 	            <posy>0</posy>
 	            <width>150</width>
 	            <height>38</height>
@@ -255,7 +295,7 @@
 	            <aligny>center</aligny>
 	            <textcolor>white</textcolor>
 	            <selectedcolor>green</selectedcolor>
-	            <align>left</align>
+	            <align>center</align>
 	            <info>ListItem.Property(source)</info>
 	        </control>
         </itemlayout>
@@ -295,7 +335,7 @@
 	            <info>ListItem.Label</info>
 	         </control>
           	<control type="label">
-	          	<description>status</description>
+	          	<description>status (white)</description>
 	            <posx>460</posx>
 	            <posy>0</posy>
 	            <width>240</width>
@@ -306,6 +346,45 @@
 	            <align>left</align>
 	            <info>ListItem.Label2</info>
           	</control>
+          	<control type="label">
+	          	<description>status (running)</description>
+	            <posx>460</posx>
+	            <posy>0</posy>
+	            <width>240</width>
+	            <height>38</height>
+	            <font>font13</font>
+	            <aligny>center</aligny>
+	            <textcolor>blue</textcolor>
+	            <align>left</align>
+	            <info>ListItem.Label2</info>
+	            <visible>StringCompare(ListItem.Genre,Running)</visible>
+	         </control>
+          	<control type="label">
+	          	<description>status (downloaded)</description>
+	            <posx>460</posx>
+	            <posy>0</posy>
+	            <width>240</width>
+	            <height>38</height>
+	            <font>font13</font>
+	            <aligny>center</aligny>
+	            <textcolor>green</textcolor>
+	            <align>left</align>
+	            <info>ListItem.Label2</info>
+	            <visible>StringCompare(ListItem.Genre,Downloaded)</visible>
+	         </control>
+          	<control type="label">
+	          	<description>status (failed)</description>
+	            <posx>460</posx>
+	            <posy>0</posy>
+	            <width>240</width>
+	            <height>38</height>
+	            <font>font13</font>
+	            <aligny>center</aligny>
+	            <textcolor>red</textcolor>
+	            <align>left</align>
+	            <info>ListItem.Label2</info>
+	            <visible>StringCompare(ListItem.Genre,Failed)</visible>
+	         </control>
           	<control type="progress">
           		<description>prog bar</description>
 				<posx>460</posx>
@@ -313,10 +392,11 @@
 				<width>240</width>
 				<height>2</height>
 				<info>ListItem.Property(download_progress)</info>
+				<visible>StringCompare(ListItem.Genre,Running)</visible>
 			</control>
 	        <control type="label">
 	          	<description>progress</description>
-	            <posx>700</posx>
+	            <posx>900</posx>
 	            <posy>0</posy>
 	            <width>200</width>
 	            <height>38</height>
@@ -324,12 +404,12 @@
 	            <aligny>center</aligny>
 	            <textcolor>white</textcolor>
 	            <selectedcolor>green</selectedcolor>
-	            <align>left</align>
+	            <align>right</align>
 	            <info>ListItem.Property(progress)</info>
 	        </control>
 	        <control type="label">
 	          	<description>source</description>
-	            <posx>900</posx>
+	            <posx>975</posx>
 	            <posy>0</posy>
 	            <width>150</width>
 	            <height>38</height>
@@ -337,7 +417,7 @@
 	            <aligny>center</aligny>
 	            <textcolor>white</textcolor>
 	            <selectedcolor>green</selectedcolor>
-	            <align>left</align>
+	            <align>center</align>
 	            <info>ListItem.Property(source)</info>
 	        </control>
         </focusedlayout>
